--- a/project.css
+++ b/project.css
@@ -119,7 +119,8 @@ body {
 
 /* File Input (invisible but clickable) */
 .drop-area input.insert {
-  opacity: 0;
+  opacity: 1;
+  font-size: large;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -171,3 +172,21 @@ body {
   gap: 20px;
   align-items: flex-start;
 }
+.remove-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 4px 10px;
+  background-color: #e3e5e7;
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.remove-btn:hover {
+    background-color: red;
+  transition-duration: 0.3s;
+}
+
